--- a/Project_ScalSystems/login.html
+++ b/Project_ScalSystems/login.html
@@ -7,8 +7,8 @@
       <label for="email">Email</label><br/>
       <input type="text" name="email" id="email" value="Max.Muster@test.com" class="inputfield"><br/>
       <label for="password">Password</label><br/>
-      <input type="password" name="password" id="password" value="xxxxxxx" class="inputfield">
-      <br/><br/>
+      <input type="password" name="password" id="password" value="xxxxxxx" class="inputfield"><br/>
+      <!-- Allow form submission with keyboard without duplicating the dialog button -->
       <input type="submit">
   </form>
 </div>
