--- a/Project_ScalSystems/index.html
+++ b/Project_ScalSystems/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>ScalableSystems</title>
     <script src="https://code.jquery.com/jquery-2.1.1.js"></script>
-    <script src="js/script.js"></script>
-    <script src="js/register.js"></script>
+    <script src="js/script.js" type="text/javascript"></script>
+    <script src="js/register.js" type="text/javascript"></script>
 
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -39,55 +39,18 @@
       </div>
     </div>
     <main role="main" class="container ">
-          <div class="row row-offcanvas row-offcanvas-right">
-            <div class="col-12 col-md-9">
-              <div id="registerUser"  class="registerUser">
-                <h2>Register</h2>
-                <hr>
-                <form id="formID">
-                    <label for="username">Username</label><br/>
-                    <input type="text" name="username" id="username" value="Username" class="inputfield"><br/>
-                    <label for="email">Email</label><br/>
-                    <input type="text" name="email" id="email" value="Max.Muster@test.com" class="inputfield"><br/>
-                    <label for="password">Password</label><br/>
-                    <input type="password" name="password" id="password" value="xxxxxxx" class="inputfield">
-                    <br/><br/>
-                    <input type="submit">
-                </form>
-              </div>
-              <div id="content">
-
-            </div><!--/span-->
+      <div class="row row-offcanvas row-offcanvas-right">
+        <div class="col-12 col-md-9">
+          <div id="content">
+          </div><!--/span-->
+          <div id="edit">
           </div>
+        </div>
+        <div id="sidecanvas" >
 
-            <div id="sidecanvas" >
-
-              <div class="col-6 col-md-3 sidebar-offcanvas" id="sidebar">
-                            <div class="well well-lg" >
-                            <p><b> You are not logged in!</b></p>
-                            <p> Login if you want to post new Questions!</p>
-                            <form id="formLogin">
-                             <div class="form-group">
-                               <label for="user">Email address:</label>
-                               <input type="text" name="username" class="form-control" id="user">
-                             </div>
-                             <div class="form-group">
-                               <label for="pwd">Password:</label>
-                               <input type="password" class="form-control" id="password">
-                             </div>
-                             <div class="checkbox">
-                               <label><input type="checkbox"> Remember me</label>
-                             </div>
-                             <button type="submit" class="btn btn-default">Login</button>
-                          </form>
-                          <br/>
-                          <p id="openRegisterUser">Click here to register!</p>
-                          </div><!--/span-->
-              </div>
-          </div>
-          </div><!--/row-->
-
-        </main><!--/.container-->
+        </div>
+      </div><!--/row-->
+    </main><!--/.container-->
 
       <hr>
 
